--- a/ml/configs/configs.json
+++ b/ml/configs/configs.json
@@ -4,7 +4,7 @@
         "model_filename": "model",
         "epochs": 1,
         "learning_rate": 0.00025,
-        "device": "gpu"
+        "device": "cpu"
     },
     "test": {
         "model_path": "/opt/airflow/training_runs/test/best.pth"
